--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
     "jest": "^29.7.0",
     "lerna": "^8.2.2"
   },
