--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "globals": "^16.2.0",
     "jest": "^29.7.0",
-    "lerna": "^8.2.2"
+    "lerna": "^8.2.2",
+    "prettier": "^3.5.3"
   },
   "scripts": {
     "install": "lerna run install",
