--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lerna": "^8.2.2",
+    "lint-staged": "^16.1.0",
     "prettier": "^3.5.3"
   },
   "scripts": {
@@ -18,6 +20,13 @@
     "clean": "lerna run clean",
     "lint": "lerna run lint",
     "prettier": "lerna run prettier",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,md}": [
+      "prettier --write",
+      "lint"
+    ]
   }
 }
