--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -27,5 +27,9 @@
   },
   "bugs": {
     "url": "https://github.com/lotosv2010/g-lerna/issues"
+  },
+  "dependencies": {
+    "execa": "^5.1.1",
+    "fs-extra": "^11.3.0"
   }
 }
