--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -27,5 +27,10 @@
   },
   "bugs": {
     "url": "https://github.com/lotosv2010/g-lerna/issues"
+  },
+  "dependencies": {
+    "dedent": "^1.6.0",
+    "init-package-json": "^8.2.1",
+    "pify": "^5.0.0"
   }
 }
