feat(pacakge.json): 配置发布文件

--- a/packages/g-lerna/package.json
+++ b/packages/g-lerna/package.json
@@ -14,7 +14,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "cli.js"
   ],
   "publishConfig": {
     "registry": "http://localhost:4873"
