--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -11,7 +11,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "command.js"
   ],
   "publishConfig": {
     "registry": "http://localhost:4873"
